--- a/bundler-sigcomm19.tex
+++ b/bundler-sigcomm19.tex
@@ -21,7 +21,7 @@
 \newcommand{\outbox}{out-box\xspace}
 \begin{document}
 \title{Taking Control of Your Traffic By Living on the Edge}
-\author{Paper XXX, \pageref{p:end} pages}
+\author{Paper 91, \pageref{p:end} pages}
 
 \begin{sloppypar}
 \include{abstract}
