--- a/packages.tex
+++ b/packages.tex
@@ -17,6 +17,7 @@
 \setlist{nolistsep}
 \usepackage{hhline}
 \usepackage{appendix}
+\usepackage{sparklines}
 %
 %% maxwidth is the original width if it is less than linewidth
 %% otherwise use linewidth (to make sure the graphics do not exceed the margin)
