--- a/robust.tex
+++ b/robust.tex
@@ -1,6 +1,17 @@
 \section{Robustness}\label{s:robust}
 
 We now ask whether \name can effectively shift the bottleneck under a variety of conditions.
+\input{caida-cdf}
+
+We evaluate the benefits of \name with a request size CDF
+drawn from an Internet core router~\cite{caida-dataset}, with the same setup otherwise described above.
+The workload remains heavy-tailed: 97.6\% of requests are 10KB or shorter, and the largest 0.002\% of requests are between $5$MB and $100$MB.
+%\begin{sparkline}{10}
+%    \spark 0 0 0.0001 0.976 0.001 0.995 0.01 0.999 1 1 /
+%\end{sparkline}
+In this scenario, \name achieves 33\% lower FCTs in the median compared to the baseline (Figure~\ref{fig:robust:caidacdf}). We use this realistic workload to evaluate \name for the remainder of this section.
+
+\an{what else should we say?}
 
 \subsection{Cross Traffic}\label{s:robust:cross}
 
