--- a/intro.tex
+++ b/intro.tex
@@ -19,9 +19,11 @@ So while network operators do not have enough visibility into the traffic to cho
 
 The natural question that arises is, how can the bottleneck be moved? We observe that the component flows of the traffic from a given sender's domain and destined for the same downstream domain, as in the examples mentioned earlier, would share common bottleneck within the network. Aggregating these component flows at the sender's egress, and controlling the outgoing rate of this aggregate to match its share at the bottleneck link, would \emph{move} the queues from the bottleneck in the network to the sender's egress itself, thus effectively shifting the bottleneck \radhika{need to simplify this sentence}. 
 
-We further note that middleboxes are now prevalent in the Internet architecture~\cite{aplomb}. They are often deployed at the egress and ingress of an enterprise network or a domain, to ensure traffic transits them for intrusion detection, packet inspection, filtering etc. They therefore provide an effective vantage point for manipulating flows. 
+We further note that middleboxes are now prevalent in the Internet architecture~\cite{aplomb}. They are often deployed at the egress and ingress of an enterprise network or a domain, to ensure traffic transits them for intrusion detection, packet inspection, filtering etc. They therefore provide an effective vantage point for aggregating and managing traffic. 
 
-We therefore propose a new type of middlebox, called a \name, that (i) performs traffic aggregation and rate control at the egress of a customer's edge to shift the bottleneck to itself, and (ii) enforces scheduling and queue management policies as per the customer's requirements (such as adhering to a desired delay target, prioritizing flows based on their size, application type, or deadline, enforcing fair queuing for a more stable rate allocation and so on).
+We therefore propose a new type of middlebox, called a \name, that (i) performs traffic aggregation and rate control at the egress of a customer's edge to shift the bottleneck to itself, and (ii) enforces scheduling and queue management policies as per the customer's requirements (such as adhering to a desired delay target, prioritizing flows based on their size, application type, or deadline, enforcing fair queuing for a more stable rate allocation and so on). 
+
+\radhika{add a few lines on \name's high level architecture.}
 
 % We make the following key contributions:
 % \begin{enumerate}
