--- a/varying-offered-load.tex
+++ b/varying-offered-load.tex
@@ -5,6 +5,6 @@
 \includegraphics[width=\maxwidth]{figure/eval:offeredload-1} 
 
 \end{knitrout}
-    \caption{\name offers diminishing returns with lower amounts of offered load.}
+    \caption{\name offers diminishing returns with lower amounts of offered load. \an{probably useful to slice this data by flow size if space}}
     \label{fig:eval:offeredload}
 \end{figure}
