--- a/overview-benefits.tex
+++ b/overview-benefits.tex
@@ -5,6 +5,6 @@
 \includegraphics[width=\maxwidth]{figure/eval:best-1} 
 
 \end{knitrout}
-    \caption{\name achieves $61$\% lower FCTs.}
+    \caption{\name achieves $33$\% lower slowdown.}
     \label{fig:eval:best}
 \end{figure}
