--- a/eval.tex
+++ b/eval.tex
@@ -85,7 +85,10 @@ We study the effects of different congestion control algorithms and different qu
 With \name, the median 
 slowdown\footnote{We define the ``slowdown'' of a request as its completion time divided by what its completion time would have been in an unloaded network. A slowdown of $1$ is optimal, and higher numbers represent worse performance.} 
 decreases from $1.62$ using FIFO scheduling at the bottleneck link (we call this the baseline configuration as it represents the status quo) to $1.08$ with \name: 33\% lower.
-Furthermore, \name's performance is near to the benefits that could be achieved by deploying scheduling on the bottleneck link (labelled ``Optimal''): their median slowdown are identical at $1.08$.
+
+Furthermore, \name's performance is near to the benefits that could be achieved by deploying scheduling on the bottleneck link (labelled ``Optimal''). 
+We implement this scheme by modifying mahimahi (our patch comprises $171$ lines of C++) to add a packet-level fair-queueing scheduler to the bottleneck link.
+Both \name and Optimal achieve an identical median slowdown of $1.08$.
 The ``optimal'' configuration is more beneficial in the tail: the $99\%$ile slowdown is $4.46$ for ``optimal'' and $9.83$ for \name. Note that the baseline achieves a $99\%$ile slowdown of $10.77$.
 
 Further, recall that this ``optimal'' configuration is not deployable in practice as we note in \S\ref{s:intro}: it forces \emph{all} customers, who may have diverging traffic characteristics, to use the same scheduling policy.
