Updates from ShareLaTeX

--- a/design.tex
+++ b/design.tex
@@ -21,7 +21,7 @@ A \name must have the following properties:
 \begin{enumerate}
     \item It provides a mechanism for scheduling the packets comprising the bundle.
     \item It must be deployable, therefore, it cannot rely on changes in end-hosts.
-    \item It must be capable of deployments on the edge of a domain. Therefore, it must also scale to high link rates. As a result, it should not maintain per-connection state -- only per-aggregate state.
+    \item It must be capable of deployments on the edge of a domain. Therefore, it must also scale to high link rates. As a result, it should not maintain per-connection state -- only per-aggregate state. \radhika{shorten}
 \end{enumerate}
 
 \subsection{Shifting the Queues}\label{s:design:shifting}
