--- a/intro.tex
+++ b/intro.tex
@@ -13,11 +13,11 @@ Thus, due to limited visibility into their customers' traffic, network operators
 On the other hand, an individual customer can effectively choose a scheduling policy for the \emph{component flows} within its own traffic as per its own requirements. 
 %; that is, scheduling policy is easier to express at the edge. 
 Examples include traffic over the public Internet between different datacenters, between campuses of an organization, collaborating universities or companies, between large content provider (\eg Netflix) and a network with many clients (e.g., a regional ISP), large-scale data backups from an organization to an external site (\eg Dropbox), and so on. 
-In each of these scenarios the sender has enough information to unilaterally choose a scheduling policy for its component flows. However, such policies are effective only when enforced on congested bottleneck links in a flow's path, which are often outside the control of these individual customers~\cite{inferring-interdomain-congestion}. 
+In each of these scenarios the sender has enough information to unilaterally choose a scheduling policy for its component flows. However, these policies are effective only when enforced on congested bottleneck links in a flow's path that experience a queue build-up, and such links are often outside the control of the individual customers~\cite{inferring-interdomain-congestion}. 
 
-So while network operators do not have enough visibility into the traffic to choose the appropriate policy, the customers do not have enough control over the bottleneck links to enforce their desired policies. This paper attempts to resolve this conundrum by simply \emph{moving the bottleneck to the customer's edge}, such that appropriate scheduling and queue management policies can be effectively enforced.
+So while network operators do not have enough visibility into the traffic to choose the appropriate policy, the customers may not have enough control over the queued-up links to enforce their desired policies. This paper attempts to resolve this conundrum by simply \emph{moving the queues in the network to the customer's edge}, such that appropriate scheduling and queue management policies can be effectively enforced.
 
-The natural question that arises is, how can the bottleneck be moved? We observe that the component flows of the traffic from a given sender's domain and destined for the same downstream domain, as in the examples mentioned earlier, would share common bottleneck within the network. Aggregating these component flows at the sender's egress, and controlling the outgoing rate of this aggregate to match its share at the bottleneck link, would \emph{move} the queues from the bottleneck in the network to the sender's egress itself, thus effectively shifting the bottleneck \radhika{need to simplify this sentence}. 
+The natural question that arises is, how can the queues be moved? We observe that the component flows of the traffic from a given sender's domain and destined for the same downstream domain, as in the examples mentioned earlier, would share common bottlenecks within the network. Aggregating these component flows at the sender's egress, and controlling the outgoing rate of this aggregate to match its share at the bottleneck link, would \emph{move} the queues from the bottleneck in the network to the sender's egress itself \radhika{need to simplify this sentence}. 
 
 We further note that middleboxes are now prevalent in the Internet architecture~\cite{aplomb}. They are often deployed at the egress and ingress of an enterprise network or a domain, to ensure traffic transits them for intrusion detection, packet inspection, filtering etc. They therefore provide an effective vantage point for aggregating and managing traffic. 
 
