--- a/related.tex
+++ b/related.tex
@@ -4,7 +4,7 @@
 \begin{itemize}
     \item PIFO and UPS
     \item Rethinking networking for five computers
-    \item use of priority queuing in private WANs
+    %\item use of priority queuing in private WANs
     \item TCP Proxy
     \begin{outline}
     \1 An existing approach which could fulfill these design objectives is a TCP Proxy.
