--- a/measure.tex
+++ b/measure.tex
@@ -146,14 +146,24 @@ so it is effectively equivalent to them both marking every 512 packets.
     
 \subsection{Microbenchmarks}
 \label{s:measure:microbench}
-    \fc{Maybe this fits better in eval}
+    \input{micro-time}
+    \input{micro-thru-dist}
+    \input{micro-delay-dist}
+    In this section we explore how well our measurements match the actual network conditions. 
 
-    How well do our estimates match the actual signals? In Figure X, we sample a two minute segment from 
-    one experiment in our evaluation section and plot the \inbox's estimated values 
-    of the RTT and receive rate compared to the queuing delay at the bottleneck router and the rate of packets leaving the bottleneck router over time. 
-    We find, \fc{...}. The absolute difference between the values across time is \fc{...} 
+    First, we consider our estimate of the receive rate (via Equation 1g). In Figure~\ref{fig:micro:time}
+    we compare our esimate of the receive rate (``Measured'') to the actual rate of packets 
+    leaving the bottleneck over a five second segment from one run in our evaluation (\fc{expand}).
+    Here we demonstrate the necessity of a window to smooth out the estimation.
 
-    More generally, we compute the total absolute difference between the estimated and actual values over the course of all experiments in our evaluation, and plot the distribution in Figure Y.
+    In Figure~\ref{fig:micro:thru}, we compute the difference between our smoothed estimate of the receive rate 
+    and the bottleneck rate at each time step and plot the distribution of this difference across
+    all of the traces in our evaluation. 80\% of the time our estimate is within 3Mbps of the 
+    actual rate.
+
+    In Figure~\ref{fig:micro:delay}, we compute the difference between our estimate of the RTT between
+    the \inbox and \outbox and the actual RTT at each time stpe and plot the distribution again
+    across all of the traces in our evaluation. 80\% of the time we are within 2ms of the actual RTT.
     
 \subsection{Limitations}
 \subsubsection{Re-Ordering}
