--- a/intro.tex
+++ b/intro.tex
@@ -17,13 +17,13 @@ In each of these scenarios the sender has enough information to unilaterally cho
 
 So while network operators do not have enough visibility into the traffic to choose the appropriate policy, the customers may not have enough control over the queued-up links to enforce their desired policies. This paper attempts to resolve this conundrum by simply \emph{moving the queues in the network to the customer's edge}, such that appropriate scheduling and queue management policies can be effectively enforced.
 
-The natural question that arises is, how can the queues be moved? We observe that the component flows of the traffic from a given sender's domain and destined for the same downstream domain, as in the examples mentioned earlier, would share common bottlenecks within the network. Aggregating these component flows at the sender's egress, and controlling the outgoing rate of this aggregate to match its share at the bottleneck link, would \emph{move} the corresponding queues from the bottleneck in the network to the sender's egress itself \radhika{need to simplify this sentence}. 
+The natural question that arises is, how can the queues be moved? We observe that the component flows of the traffic from a given sender's domain and destined for the same downstream domain, as in the examples mentioned earlier, would share common bottlenecks within the network \radhika{make this softer}. Aggregating these component flows at the sender's egress, and controlling the outgoing rate of this aggregate to match its share at the bottleneck link, would \emph{move} the corresponding queues from the bottleneck in the network to the sender's egress itself \radhika{need to simplify this sentence}. 
 
 We further note that middleboxes are now prevalent in the Internet architecture~\cite{aplomb}. They are often deployed at the egress and ingress of an enterprise network or a domain, to ensure traffic transits them for intrusion detection, packet inspection, filtering etc. They therefore provide an effective vantage point for aggregating and managing traffic. 
 
-We therefore propose a new type of middlebox, called a \name, that (i) performs traffic aggregation and rate control at the egress of a customer's edge to shift the queues for the traffic to itself, and (ii) enforces scheduling and queue management policies as per the customer's requirements (such as adhering to a desired delay target, prioritizing flows based on their size, application type, or deadline, enforcing fair queuing for a more stable rate allocation and so on). 
+We therefore propose a new type of middlebox, called a \name, that (i) performs traffic aggregation and rate control at the egress of a customer's edge to shift the queues for the traffic from within the network to itself, and (ii) enforces scheduling and queue management policies as per the customer's requirements (such as adhering to a desired delay target, prioritizing flows based on their size, application type, or deadline, enforcing fair queuing for a more stable rate allocation and so on). 
 
-\radhika{add a few lines on \name's high level architecture.}
+\radhika{add a few lines on \name's high level architecture.} 
 
 % We make the following key contributions:
 % \begin{enumerate}
