new varying cross traffic graphs

--- a/elastic-cross.tex
+++ b/elastic-cross.tex
@@ -17,6 +17,6 @@
     \caption{Alternate configuration -- Copa uses Nimbus's elasticity detector.}\label{fig:robust:cr-elastic:b}
     \end{subfigure}
 
-    \caption{Elastic cross traffic.}
+    \caption{Elastic cross traffic. \an{data has results across 1,2,3,4 elastic cross traffic flows. need to re-plot to show this} }
     \label{fig:robust:cr-elastic}
 \end{figure}
