--- a/inelastic-cross.tex
+++ b/inelastic-cross.tex
@@ -5,6 +5,6 @@
 \includegraphics[width=\maxwidth]{figure/robust:cr-inelastic-1} 
 
 \end{knitrout}
-    \caption{Inelastic cross traffic.}
+    \caption{Inelastic cross traffic. \an{data here includes for 12Mbps, 24Mbps, and 36Mbps inelastic cross traffic, where \name offered load is scaled to make it add up to 87.5\% total offered load to the link. Need to re-plot to show this (change above plotting script)} }
     \label{fig:robust:cr-inelastic}
 \end{figure}
