--- a/graphs/elastic-cross.Rnw
+++ b/graphs/elastic-cross.Rnw
@@ -55,6 +55,6 @@ ggplot(df, aes(x=Duration, linetype=Alg)) +
     \caption{Alternate configuration -- Copa uses Nimbus's elasticity detector.}\label{fig:robust:cr-elastic:b}
     \end{subfigure}
 
-    \caption{Elastic cross traffic.}
+    \caption{Elastic cross traffic. \an{data has results across 1,2,3,4 elastic cross traffic flows. need to re-plot to show this} }
     \label{fig:robust:cr-elastic}
 \end{figure}
