--- a/graphs/inelastic-cross.Rnw
+++ b/graphs/inelastic-cross.Rnw
@@ -24,6 +24,6 @@ ggplot(df, aes(x=Duration, linetype=Alg)) +
         legend.text=element_text(size=12)
     )
 @
-    \caption{Inelastic cross traffic.}
+    \caption{Inelastic cross traffic. \an{data here includes for 12Mbps, 24Mbps, and 36Mbps inelastic cross traffic, where \name offered load is scaled to make it add up to 87.5\% total offered load to the link. Need to re-plot to show this (change above plotting script)} }
     \label{fig:robust:cr-inelastic}
 \end{figure}
